ResourceLoadScheduler: Fix incorrect wording of console info

Update the console message. This is based on a user's feedback :)

Bug: 883173
Change-Id: I197f44a52b13319e6da96a04bb09792f9dcce2cf
Reviewed-on: https://chromium-review.googlesource.com/1226751
Reviewed-by: Kunihiko Sakamoto <ksakamoto@chromium.org>
Commit-Queue: Takashi Toyoshima <toyoshim@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591956}
Former-commit-id: 3cc9e16a25f2c7f0ba2e8ba940e4c74b65b8a90c